[gd_scene load_steps=17 format=3 uid="uid://cumde4dlacp0m"]

[ext_resource type="Script" path="res://Script/GriefShadowArcade.gd" id="1_0n2yb"]
[ext_resource type="Texture2D" uid="uid://cmdfb4y6vwwvg" path="res://Assets/grief/Katharsis_grief_eye_close_frame1.png" id="2_phshb"]
[ext_resource type="Texture2D" uid="uid://b2sr61i6cmgce" path="res://Assets/grief/Katharsis_grief_eye_close_frame_2.png" id="3_hqyxy"]
[ext_resource type="Texture2D" uid="uid://hi8joo8ds4ry" path="res://Assets/grief/Katharsis_grief_eye_close_frame_3.png" id="4_pk5f8"]
[ext_resource type="Texture2D" uid="uid://c7ss37fjw5d33" path="res://Assets/grief/Katharsis_grief_move_frame_1.png" id="5_v50r6"]
[ext_resource type="Texture2D" uid="uid://c81cx055kqxdv" path="res://Assets/shadow_spawnn_power_off3.png" id="5_xkoqq"]
[ext_resource type="Texture2D" uid="uid://djgm80k832i8a" path="res://Assets/grief/Katharsis_grief_move_frame_2.png" id="6_2ahpr"]
[ext_resource type="Texture2D" uid="uid://nidjbdpk25rw" path="res://Assets/grief/Katharsis_grief_move_frame3.png" id="7_x6n4x"]
[ext_resource type="Texture2D" uid="uid://bcb35pvgu5b8t" path="res://Assets/grief/Katharsis_grief_move_frame4.png" id="8_pquga"]
[ext_resource type="Texture2D" uid="uid://wdr8wflgaeyl" path="res://Assets/grief/Katharsis_grief_move_frame_5.png" id="9_fct8p"]
[ext_resource type="Texture2D" uid="uid://6no5cn8lufai" path="res://Assets/grief/Katharsis_grief_move_frame_6.png" id="10_h2dp7"]
[ext_resource type="AudioStream" uid="uid://dyanyacdbbsf5" path="res://Assets/Musik/Sounds/player_2_jump.ogg" id="11_sft7u"]
[ext_resource type="AudioStream" uid="uid://bkrc2uyiiwug0" path="res://Assets/Musik/Sounds/pfuetze.wav" id="12_f632x"]
[ext_resource type="AudioStream" uid="uid://bbpbgxsu05xxg" path="res://Assets/Musik/Sounds/slide.wav" id="13_phbxj"]
[ext_resource type="Texture2D" uid="uid://c0jnktmmfroae" path="res://Assets/stun_stars.png" id="14_m3lxd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7jyy7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_phshb")
}, {
"duration": 1.0,
"texture": ExtResource("3_hqyxy")
}, {
"duration": 1.0,
"texture": ExtResource("4_pk5f8")
}, {
"duration": 1.0,
"texture": ExtResource("3_hqyxy")
}, {
"duration": 1.0,
"texture": ExtResource("2_phshb")
}],
"loop": false,
"name": &"blink",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_phshb")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_xkoqq")
}, {
"duration": 1.0,
"texture": ExtResource("4_pk5f8")
}, {
"duration": 1.0,
"texture": ExtResource("3_hqyxy")
}],
"loop": false,
"name": &"spawn",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_v50r6")
}, {
"duration": 1.0,
"texture": ExtResource("6_2ahpr")
}, {
"duration": 1.0,
"texture": ExtResource("7_x6n4x")
}, {
"duration": 1.0,
"texture": ExtResource("8_pquga")
}, {
"duration": 1.0,
"texture": ExtResource("9_fct8p")
}, {
"duration": 1.0,
"texture": ExtResource("10_h2dp7")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[node name="CharacterBody2D" type="CharacterBody2D" groups=["shadow"]]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_0n2yb")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(52.6957, -80.7379)
scale = Vector2(8.9375, 21.2813)
polygon = PackedVector2Array(-19.7126, 3.44816, 6.69301, 3.21322, -4.27203, -7.45345, -11.321, -7.59442)

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(-0.485491, -125.357)
collision_layer = 3
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox"]
position = Vector2(-16.3056, -65.8125)
scale = Vector2(18.6111, 47.8125)
polygon = PackedVector2Array(-6.75373, 3.92811, 8.18358, 3.90719, 2.32687, -1.25882, -2.56269, -1.23791)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-0.485491, -125.357)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.485491, -125.357)
sprite_frames = SubResource("SpriteFrames_7jyy7")
animation = &"spawn"
autoplay = "default"

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpHeightTimer" type="Timer" parent="."]
wait_time = 0.07

[node name="BufferingTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="PuddleSpawnpoint1" type="Marker2D" parent="."]
position = Vector2(-0.485491, -159.357)

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-0.485491, -125.357)
stream = ExtResource("11_sft7u")
volume_db = 5.115

[node name="Ability" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-0.485491, -125.357)
stream = ExtResource("12_f632x")

[node name="Dash" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-0.485491, -125.357)
stream = ExtResource("13_phbxj")

[node name="Stun" type="Node2D" parent="."]
visible = false

[node name="StunStars" type="Sprite2D" parent="Stun"]
position = Vector2(-5.66071, -78.1607)
scale = Vector2(1.16987, 0.42908)
texture = ExtResource("14_m3lxd")

[node name="StunStars2" type="Sprite2D" parent="Stun"]
position = Vector2(-7.14286, -57.1429)
rotation = -3.12715
scale = Vector2(1.16987, 0.42908)
texture = ExtResource("14_m3lxd")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-0.485491, -25.3566)
target_position = Vector2(-132.857, 1.42857)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="JumpHeightTimer" to="." method="_on_jump_height_timer_timeout"]
[connection signal="timeout" from="BufferingTimer" to="." method="_on_buffering_timer_timeout"]
